Fixed scrollbar overlay issue

--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
+    overflow: overlay;
 }
 
 body::before,
@@ -134,7 +135,6 @@ body::after {
     backdrop-filter: blur(10px);
     z-index: 999;
     padding: 35px 50px;
-    border-radius: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
